fix: align center

--- a/src/pages/MainPage.module.scss
+++ b/src/pages/MainPage.module.scss
@@ -1,14 +1,33 @@
+.container {
+    width: 100%;
+    margin: auto;
+  }
 .main-div {
     display: flex;
     flex-wrap: wrap;
+    justify-content:space-between;
+    row-gap: 5px;
     .img {
         width: 10rem;
         height: 12rem;
+        border-radius: 10px;
     }
     .imageDiv {
         display: flex;
         flex-direction: column;
+        align-items: center;
         width: 15rem;
-        gap: 5px;
+        gap: 15px;
+        .btn {
+            margin-top: auto;
+            width: 80%;
+            border-radius: 10px;
+        }
     }
 }
+@media (max-width: 500px) {
+    .main-div {
+        flex-direction: column;
+        align-items: center;
+    }
+  }
